--- a/css/common.css
+++ b/css/common.css
@@ -86,6 +86,9 @@ ul,ul li{
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
+    max-width: 640px;
+    min-width: 320px;
+    margin: 0 auto;
 }
 .scrollview{
 	width: 100%;
